# testApp-qt

./: CMakeLists.txt  README.md  fileworker.cpp  fileworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  workwindow.cpp  workwindow.h  workwindow.ui
